# small-rngs

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  aliases.js  appveyor.yml  index.html  search-index.js
benches/: generators.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/rand_core/: trait.RngCore.js  trait.SeedableRng.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
rand_pcg/: CHANGELOG.md  Cargo.toml  README.md  index.html  struct.Lcg64Xsh32.html  struct.Mcg128Xsl64.html
rand_pcg/benches/: mod.rs
rand_pcg/src/: lib.rs  pcg128.rs  pcg64.rs
rand_pcg/tests/: lcg64xsh32.rs  mcg128xsl64.rs
rand_xorshift/: Cargo.toml  README.md  index.html  struct.XorShiftRng.html
rand_xorshift/benches/: mod.rs
rand_xorshift/src/: lib.rs
rand_xorshift/tests/: mod.rs
small_rngs/: all.html  index.html
src/: lib.rs
src/rand_pcg/: lib.rs.html  pcg128.rs.html  pcg64.rs.html
src/rand_xorshift/: lib.rs.html
src/small_rngs/: lib.rs.html
utils/ci/: script.sh
